--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Backend Functionality of KerRing Password Manager Application",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --env-file=.env index.js",
-    "start": "node --env-file=.env index.js",
+    "dev": "nodemon --env-file=.env app.js",
+    "start": "node --env-file=.env app.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.42.0",
+    "express": "^5.1.0",
     "mysql2": "^3.14.0"
   }
 }
