--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "request-ip": "^3.3.0"
   }
 }
