--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "argon2": "^0.43.0",
     "cookie-parser": "^1.4.7",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
