--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.7",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "request-ip": "^3.3.0"
   }
