--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,14 @@
   "author": "Nikhil Dhiman",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "drizzle-kit": "^0.31.0",
-    "nodemon": "^3.1.10"
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "globals": "^16.0.0",
+    "nodemon": "^3.1.10",
+    "prettier": "3.5.3"
   },
   "dependencies": {
     "argon2": "^0.43.0",
@@ -25,6 +31,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
-    "request-ip": "^3.3.0"
+    "request-ip": "^3.3.0",
+    "zod": "^3.24.3"
   }
 }
