--- a/server/package.json
+++ b/server/package.json
@@ -28,11 +28,13 @@
     "argon2": "^0.43.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "request-ip": "^3.3.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3"
   }
 }
