--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "Password Manager",
 	"main": "server.js",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon --env-file .env server.js",
@@ -19,6 +20,7 @@
 	},
 	"dependencies": {
 		"drizzle-orm": "^0.43.1",
+		"express": "^5.1.0",
 		"mysql2": "^3.14.1"
 	}
 }
