--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"nodemon": "^3.1.10"
 	},
 	"dependencies": {
+		"argon2": "^0.43.0",
 		"drizzle-orm": "^0.43.1",
 		"express": "^5.1.0",
 		"mysql2": "^3.14.1"
