--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "axios": "^1.9.0",
     "jose": "^6.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "uuid": "^11.1.0",
     "zod": "^3.25.34"
   },
   "devDependencies": {
