--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
 		"drizzle-orm": "^0.43.1",
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
-		"mysql2": "^3.14.1"
+		"mysql2": "^3.14.1",
+		"zod": "^3.25.67"
 	}
 }
