--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"react-dom": "^19.1.0",
 		"react-icons": "^5.5.0",
 		"react-router": "^7.6.2",
+		"react-spinners": "^0.17.0",
 		"uuid": "^11.1.0",
 		"zod": "^3.25.34"
 	},
