--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"@fvilers/disable-react-devtools": "^1.3.0",
 		"axios": "^1.9.0",
+		"dexie": "^4.0.11",
+		"dexie-react-hooks": "^1.1.7",
 		"jose": "^6.0.11",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
