--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 		"axios": "^1.9.0",
 		"dexie": "^4.0.11",
 		"dexie-react-hooks": "^1.1.7",
+		"fast-deep-equal": "^3.1.3",
 		"jose": "^6.0.11",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
